reports/chapters/modules.err.log
Traceback (most recent call last):
  File "/home/vdsukhov/miniconda3/envs/jbook/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/home/vdsukhov/miniconda3/envs/jbook/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/vdsukhov/miniconda3/envs/jbook/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/vdsukhov/miniconda3/envs/jbook/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/vdsukhov/miniconda3/envs/jbook/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/home/vdsukhov/miniconda3/envs/jbook/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/vdsukhov/miniconda3/envs/jbook/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/vdsukhov/miniconda3/envs/jbook/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
from itertools import product
:tags: ['hide-output']
print("First product result:")
for elem in product('ABCD', 'xy'):
    print(elem)

print("Second product result:")
for elem in product(range(2), repeat=3):
    print(elem)
------------------

[0;36m  Cell [0;32mIn[16], line 2[0;36m[0m
[0;31m    :tags: ['hide-output'][0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (1864326611.py, line 2)

